# IAMandagent

./: .gitignore  .gitleaks.toml  .gitleaksignore  API_REFERENCE.md  CHANGELOG.md  CLI_GUIDE.md  CONTRIBUTING.md  Dockerfile  FRAMEWORK_GUIDES.md  HANDOFF.md  INTEGRATION.md  LICENSE  QA_GUIDE.md  README.md  REPOS.md  ROADMAP.md  SECURITY.md  SPEC.md  pyproject.toml  railway.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
dashboard/: .env.local.example  README.md  package-lock.json  package.json  tailwind.config.ts
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/dashboard/: layout.tsx  page.tsx
dashboard/app/dashboard/agents/: page.tsx
dashboard/app/dashboard/logs/: page.tsx
dashboard/app/dashboard/policies/: page.tsx
dashboard/app/login/: page.tsx
dashboard/components/: AgentIcon.tsx  ThemeToggle.tsx
database/: MIGRATION_GUIDE.md  add_agent_appearance.sql  add_user_organizations.sql  debug_and_fix.sql  debug_check.sql  rls_policies.sql  schema.sql
database/archive/: README.md  add_user_org_link.sql  clean_slate.sql  fix_cli_org_owner.sql  fix_rls_for_dashboard.sql  fix_status_constraint.sql  link_existing_users.sql
database/migrations/: 000_template.sql  001_initial_schema.sql  002_user_organizations.sql  003_agent_appearance.sql  004_fix_status_constraint.sql  005_rls_policies.sql  006_fix_handle_new_user_trigger.sql  README.md
docs/: API_REFERENCE.md  CLI_GUIDE.md  FRAMEWORK_GUIDES.md  INTEGRATION.md  ROADMAP.md  SETUP_GUIDE.md  USAGE_FROM_OTHER_PROJECT.md
examples/: .env.example  LLM_AGENT_README.md  README.md  async_usage.py  backend_integration.py  basic_usage.py  dev_test_agent.py  financial_agent.py  guard_usage.py  interactive_llm_agent.py  my_first_agent.py  persistent_agent.py  production_ready_agent.py  quickstart.py  secure_vs_insecure.py
examples/secrets/: .gitignore
server/: .env.example  .env.production.example  Dockerfile  README.md  docker-compose.yml  requirements.txt  server.py
src/hashed/: __init__.py  banner.py  cli.py  client.py  config.py  core.py  exceptions.py  guard.py  identity.py  identity_store.py  ledger.py  models.py  templates.py
src/hashed/crypto/: __init__.py  hasher.py
src/hashed/integrations/: __init__.py  langchain.py
src/hashed/utils/: __init__.py  http_client.py
tests/: __init__.py  conftest.py  test_api.py  test_banner.py  test_circuit_breaker.py  test_cli.py  test_cli_commands.py  test_cli_network.py  test_client.py  test_core.py  test_core_backend.py  test_core_coverage.py  test_crypto.py  test_guard.py  test_http_client.py  test_identity.py  test_identity_store.py  test_integration_langchain.py  test_ledger.py  test_models.py  test_templates.py
