[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hashed-sdk"
version = "0.3.1"
description = "AI Agent Governance & Security - Professional SDK with CLI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Juan Carlos Osorio", email = "josoriop9@gmail.com"}
]
keywords = ["ai-agents", "governance", "cryptography", "security", "audit", "policy-engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

dependencies = [
    "cryptography>=41.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    # keyring is optional: install with `pip install hashed-sdk[secure]`
    # Falls back to file-based storage if not available.
]

[project.scripts]
hashed = "hashed.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "mypy>=1.5.0",
    "ruff>=0.0.285",
]
# Secure credential storage — uses OS keychain (macOS Keychain, Windows
# Credential Locker, Linux Secret Service).  Strongly recommended for
# production agents (C-02 remediation — OWASP ASVS 4.0 L2).
secure = [
    "keyring>=24.0.0",
]
# Framework integrations
langchain = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "openai>=1.0.0",
]
crewai = [
    "crewai>=0.55.0",
    "openai>=1.0.0",
]
strands = [
    "strands-agents>=0.1.0",
    "boto3>=1.34.0",
]
autogen = [
    "pyautogen>=0.3.0",
    "openai>=1.0.0",
]
# Install all framework integrations
all = [
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "crewai>=0.55.0",
    "strands-agents>=0.1.0",
    "boto3>=1.34.0",
    "pyautogen>=0.3.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Josoriop9/IAMandagent"
Documentation = "https://github.com/Josoriop9/IAMandagent/blob/main/README.md"
Repository = "https://github.com/Josoriop9/IAMandagent"
Issues = "https://github.com/Josoriop9/IAMandagent/issues"
Changelog = "https://github.com/Josoriop9/IAMandagent/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src/hashed",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "B904",  # raise-without-from-cause (requires logic refactor, deferred)
    "B017",  # blind-exception-assert (deferred)
    "E501",  # line-too-long (handled by formatter, not linter)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
